[gd_scene load_steps=4 format=3 uid="uid://bd11ec50fhc2a"]

[ext_resource type="Script" path="res://scripts/character.gd" id="1_r3cvs"]
[ext_resource type="SpriteFrames" uid="uid://dt8y23sbwd1tc" path="res://anim/cavemen_sprite_frames.tres" id="2_gicsh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vcx0h"]
size = Vector2(73, 76)

[node name="character" type="Node2D"]
script = ExtResource("1_r3cvs")

[node name="sprites" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_gicsh")
animation = &"cavemen_sitting"

[node name="blink_timer" type="Timer" parent="."]

[node name="blink_duration_timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, -2)
shape = SubResource("RectangleShape2D_vcx0h")

[connection signal="timeout" from="blink_timer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="blink_duration_timer" to="." method="_on_blink_duration_timers_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
